storage/innobase/buf/buf0buf.cc
@@ -1103,6 +1103,16 @@ buf_page_is_corrupted(
 
 			if (srv_checksum_algorithm
 			    == SRV_CHECKSUM_ALGORITHM_CRC32) {
+
+				DBUG_EXECUTE_IF(
+					"page_intermittent_checksum_mismatch", {
+					static int page_counter;
+					if (page_counter++ == 2) {
+						checksum_field2++;
+					}
+				});
+
+
 				crc32 = buf_page_check_crc32(read_buf,
 							     checksum_field2);
 				crc32_inited = true;
